* tests/test_pep8.py:   - enable for a subset of the code and fix a bunch of pep8 issues

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
     - removed, not used anymore
   * DistUpgrade/DistUpgradeCache.py:
     - remove py2ism
+  * tests/test_pep8.py:
+    - enable for a subset of the code and fix a bunch of pep8 issues
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 13:30:16 +0200
 
