* DistUpgrade/DistUpgradeQuirks.py:   - cleanup no longer needed quirks, pep8 clean

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
     - remove py2ism
   * tests/test_pep8.py:
     - enable for a subset of the code and fix a bunch of pep8 issues
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - cleanup no longer needed quirks, pep8 clean
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 13:30:16 +0200
 
