--- a/debian/changelog
+++ b/debian/changelog
@@ -26,13 +26,17 @@ ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeViewGtk.py:
     - removed old gtk2 version, we have DistUpgradeViewGtk3.py and
       the gtk2 version will not work with py3
+  * DistUpgrade/apt-autoinst-fixup.py:
+    - removed, no longer used
   * DistUpgrade/*.py:
     - remove from future as we are on py3 now
   * DistUpgrade/DistUpgradeAufs.py, DistUpgrade/DistUpgradeConfigParser.py,
     DistUpgrade/DistUpgradeFetcherSelf.py:
     - add missing header
+  * po/*.po:
+    - automatic launchpad translation update
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 13:30:16 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 15:17:35 +0200
 
 ubuntu-release-upgrader (1:0.220.3) trusty-proposed; urgency=low
 
