--- a/debian/changelog
+++ b/debian/changelog
@@ -35,8 +35,13 @@ ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
     - add missing header
   * po/*.po:
     - automatic launchpad translation update
+  * lp:~mvo/ubuntu-release-upgrader/partial-upgrade-cleanup:
+    - fix crash when the DistUpgradeViewText is used with py3
+    - fixes a bug with the logging setup (LP: #1302380) 
+      Thanks to Brian Murray for the fix!
+    - fixes a crash when do-partial-upgrade is used without a DISPLAY
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 15:17:35 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 15:39:41 +0200
 
 ubuntu-release-upgrader (1:0.220.3) trusty-proposed; urgency=low
 
