* data/gtkbuilder/DistUpgrade.ui:   - update 14.04 -> 14.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
     - add ubuntu-gnome-desktop meta package
     - remove no longer needed configuration entries
     - remove gtk2/py2 DistUpgradeViewGtk view
+  * data/gtkbuilder/DistUpgrade.ui:
+    - update 14.04 -> 14.10
   * data/removal_blacklist.cfg:
     - add ubuntu-gnome-desktop
   * DistUpgrade/{Devel,EOF,}ReleaseAccounement, DistUpgrade/window_main.ui:
@@ -43,7 +45,7 @@ ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
   * lp:~mvo/ubuntu-release-upgrader/text-install-progress:
     - show basic text install progress during the upgrade
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 15:39:41 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 15:54:18 +0200
 
 ubuntu-release-upgrader (1:0.220.3) trusty-proposed; urgency=low
 
