releasing package ubuntu-release-upgrader version 1:14.10.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:14.10.0) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:14.10.0) utopic; urgency=low
 
   * data/DistUpgrade.cfg:
     - updated for trusty->utopic
