releasing package ubuntu-release-upgrader version 1:14.10.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:14.10.1) utopic; urgency=low
+
+  * po/POTFILES:in:
+    - remove DistUpgradeViewGtk.py to fix FTBFS
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 16:35:34 +0200
+
 ubuntu-release-upgrader (1:14.10.0) utopic; urgency=low
 
   * data/DistUpgrade.cfg:
