* debian/test/control:   - add missing pep8 test dependency * tests/test_xorg_fix_intrepid.py:   -

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:14.10.2) UNRELEASEDutopic; urgency=low
+
+  * debian/test/control:
+    - add missing pep8 test dependency
+  * tests/test_xorg_fix_intrepid.py:
+    - 
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 03 May 2014 08:35:06 +0200
+
 ubuntu-release-upgrader (1:14.10.1) utopic; urgency=low
 
   * po/POTFILES:in:
