add missing changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ ubuntu-release-upgrader (1:14.10.2) utopic; urgency=low
   * debian/test/control:
     - add missing pep8 test dependency
   * tests/test_xorg_fix_intrepid.py:
-    - 
+    - remove no longer needed multiset test
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 03 May 2014 08:37:51 +0200
 
