--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:14.10.3) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py:
+    - sort the foreign and obsolete lists of packages for easier reading.
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 08 May 2014 07:47:03 -0700
+
 ubuntu-release-upgrader (1:14.10.2) utopic; urgency=low
 
   * debian/test/control:
