* data/release-upgrades:   - set upgrade prompt policy to "normal"

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 ubuntu-release-upgrader (1:14.10.3) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py:
     - sort the foreign and obsolete lists of packages for easier reading.
+
+  [ Michael Vogt ]
+  * data/release-upgrades:
+    - set upgrade prompt policy to "normal"
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 08 May 2014 07:47:03 -0700
 
