--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:14.10.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:14.10.3) utopic; urgency=medium
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py:
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:14.10.3) UNRELEASED; urgency=medium
   * data/release-upgrades:
     - set upgrade prompt policy to "normal"
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 08 May 2014 07:47:03 -0700
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 16 May 2014 13:52:42 +0200
 
 ubuntu-release-upgrader (1:14.10.2) utopic; urgency=low
 
