* DistUpgrade/DistUpgradeController.py:   - modify where the sort of foreign and obsolete lists of packages     occurs (LP: #1322363)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:14.10.4) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py:
+    - modify where the sort of foreign and obsolete lists of packages
+      occurs (LP: #1322363)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 22 May 2014 14:46:13 -0700
+
 ubuntu-release-upgrader (1:14.10.3) utopic; urgency=medium
 
   [ Brian Murray ]
