releasing package ubuntu-release-upgrader version 1:14.10.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:14.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:14.10.4) utopic; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py:
     - modify where the sort of foreign and obsolete lists of packages
