* DistUpgrade/DistUpgradeController.py:   - ensure that error variable is empty if not set (LP: #1321959)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:14.10.5) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py:
+    - ensure that error variable is empty if not set (LP: #1321959)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 04 Jun 2014 09:36:05 -0700
+
 ubuntu-release-upgrader (1:14.10.4) utopic; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py:
