--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 ubuntu-release-upgrader (1:14.10.5) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py:
     - ensure that error variable is empty if not set (LP: #1321959)
+  
+  [ Michael Vogt ]
+  * pep8 fixes
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 04 Jun 2014 09:36:05 -0700
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Jun 2014 08:23:58 +0200
 
 ubuntu-release-upgrader (1:14.10.4) utopic; urgency=medium
 
