releasing package ubuntu-release-upgrader version 1:14.10.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,14 @@
-ubuntu-release-upgrader (1:14.10.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:14.10.5) utopic; urgency=medium
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py:
     - ensure that error variable is empty if not set (LP: #1321959)
   
   [ Michael Vogt ]
-  * pep8 fixes
+  * pep8 fixes to fix autopkgtest failure about the new E265
+    error condition
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Jun 2014 08:23:58 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Jun 2014 08:44:33 +0200
 
 ubuntu-release-upgrader (1:14.10.4) utopic; urgency=medium
 
