check-new-release-gtk: Fix deprecated Gio.Settings constructor invocation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
+
+  * check-new-release-gtk: Fix deprecated Gio.Settings constructor invocation.
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2014 08:33:11 +0200
+
 ubuntu-release-upgrader (1:14.10.5) utopic; urgency=medium
 
   [ Brian Murray ]
