Fix test failure with DistUpgradeFetcherCore test by switching from precise to trusty.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
 
+  [ Martin Pitt ]
   * check-new-release-gtk: Fix deprecated Gio.Settings constructor invocation.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2014 08:33:11 +0200
+  [ Brian Murray ]
+  * Fix test failure with DistUpgradeFetcherCore test by switching from
+    precise to trusty.
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 06 Aug 2014 08:11:48 -0700
 
 ubuntu-release-upgrader (1:14.10.5) utopic; urgency=medium
 
