DistUpgrade/DistUpgradeApport.py: log that dependency problems are not reported.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
   [ Brian Murray ]
   * Fix test failure with DistUpgradeFetcherCore test by switching from
     precise to trusty.
+  * DistUpgrade/DistUpgradeApport.py: log that dependency problems are not
+    reported.
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 06 Aug 2014 08:11:48 -0700
 
