* DistUpgrade/DistUpgradeApport.py:   - all apport versions support --tags now so just add dist-upgrade tag   - remove redundant ErrorMessage string

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
   [ Brian Murray ]
   * Fix test failure with DistUpgradeFetcherCore test by switching from
     precise to trusty.
-  * DistUpgrade/DistUpgradeApport.py: log that dependency problems are not
-    reported.
+  * DistUpgrade/DistUpgradeApport.py:
+    - log that dependency problems are not reported.
+    - all apport versions support --tags now so just add dist-upgrade tag
+    - remove redundant ErrorMessage string
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 06 Aug 2014 08:11:48 -0700
 
