DistUpgrade/DistUpgradeApport.py: modify Popen call to set universal_newlines=True (LP: #1357034)

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
     - log that dependency problems are not reported.
     - all apport versions support --tags now so just add dist-upgrade tag
     - remove redundant ErrorMessage string
+    - modify Popen call to set universal_newlines=True (LP: #1357034)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 06 Aug 2014 08:11:48 -0700
 
