--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:14.10.6) utopic; urgency=medium
 
   [ Martin Pitt ]
   * check-new-release-gtk: Fix deprecated Gio.Settings constructor invocation.
@@ -12,7 +12,7 @@ ubuntu-release-upgrader (1:14.10.6) UNRELEASED; urgency=medium
     - remove redundant ErrorMessage string
     - modify Popen call to set universal_newlines=True (LP: #1357034)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 06 Aug 2014 08:11:48 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 14 Aug 2014 15:40:19 -0700
 
 ubuntu-release-upgrader (1:14.10.5) utopic; urgency=medium
 
