* tests/test_dist_upgrade_fetcher_core.py:   - fix ADT test

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:14.10.7) UNRELEASED; urgency=low
+
+  * tests/test_dist_upgrade_fetcher_core.py:
+    - fix ADT test
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Aug 2014 11:19:18 +0200
+
 ubuntu-release-upgrader (1:14.10.6) utopic; urgency=medium
 
   [ Martin Pitt ]
