releasing package ubuntu-release-upgrader version 1:14.10.7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:14.10.7) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:14.10.7) utopic; urgency=low
 
   * tests/test_dist_upgrade_fetcher_core.py:
     - fix ADT test
