data/removal_blacklist.cfg: make update-manager blacklist entry more specific so it does not match update-manager-kde. (LP: #1313165)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:14.10.8) UNRELEASED; urgency=medium
+
+  * data/removal_blacklist.cfg: make update-manager blacklist entry more
+    specific so it does not match update-manager-kde. (LP: #1313165)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 22 Aug 2014 09:26:14 -0700
+
 ubuntu-release-upgrader (1:14.10.7) utopic; urgency=low
 
   * tests/test_dist_upgrade_fetcher_core.py:
