DistUpgradeViewKDE mark byte strings correctly to avoid a TypeError on diff processing LP: #1375088

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 ubuntu-release-upgrader (1:14.10.8) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * data/removal_blacklist.cfg: make update-manager blacklist entry more
     specific so it does not match update-manager-kde. (LP: #1313165)
+
+  [ Harald Sitter ]
+  * DistUpgradeViewKDE mark byte strings correctly to avoid a TypeError
+    on diff processing LP: #1375088
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 22 Aug 2014 09:26:14 -0700
 
