debian/changelog: merge missing changeog entry from upload 1:14.10.8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:14.10.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:14.10.8) utopic; urgency=medium
 
   [ Brian Murray ]
   * data/removal_blacklist.cfg: make update-manager blacklist entry more
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:14.10.8) UNRELEASED; urgency=medium
   * DistUpgradeViewKDE mark byte strings correctly to avoid a TypeError
     on diff processing LP: #1375088
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 22 Aug 2014 09:26:14 -0700
+ -- Harald Sitter <apachelogger@kubuntu.org>  Mon, 20 Oct 2014 12:24:43 +0200
 
 ubuntu-release-upgrader (1:14.10.7) utopic; urgency=low
 
