* DistUpgrade/DistUpgradeController.py:   - fix crash when one of the sources.list entries gives a network     error (LP: #1347834)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:14.10.9) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - fix crash when one of the sources.list entries gives a network
+      error (LP: #1347834)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Oct 2014 10:12:27 -0400
+
 ubuntu-release-upgrader (1:14.10.8) utopic; urgency=medium
 
   [ Brian Murray ]
