* DistUpgrade/{EOL,}ReleaseAnnouncement,   DistUpgrade/{data,}/window_main.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 14.10->15.04

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low
+
+  * DistUpgrade/{EOL,}ReleaseAnnouncement,
+    DistUpgrade/{data,}/window_main.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:    
+    - updated for 14.10->15.04
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Nov 2014 14:06:53 +0100
+
 ubuntu-release-upgrader (1:14.10.9) utopic; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
