releasing package ubuntu-release-upgrader version 1:15.04.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:15.04.0) vivid; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/{EOL,}ReleaseAnnouncement,
@@ -13,7 +13,7 @@ ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low
   [ Iain Lane ]
   * Port to VTE 2.91, and update dependency in debian/control
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Nov 2014 14:06:53 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Nov 2014 16:34:39 +0100
 
 ubuntu-release-upgrader (1:14.10.9) utopic; urgency=low
 
