--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:15.04.1) UNRELEASED; urgency=medium
+
+  * data/removal_blacklist.cfg: Modify entry for ubuntu-desktop to be
+    ubuntu-desktop$ so that it doesn't match ubuntu-desktop-next.
+    (LP: #1395000)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Nov 2014 10:32:31 -0800
+
 ubuntu-release-upgrader (1:15.04.0) vivid; urgency=low
 
   [ Michael Vogt ]
