DistUpgrade/DistUpgradeApport.py: set DistroRelease to the release we are upgrading to not the one which we are upgrading from.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ ubuntu-release-upgrader (1:15.04.1) UNRELEASED; urgency=medium
   * data/removal_blacklist.cfg: Modify entry for ubuntu-desktop to be
     ubuntu-desktop$ so that it doesn't match ubuntu-desktop-next.
     (LP: #1395000)
+  * DistUpgrade/DistUpgradeApport.py: set DistroRelease to the release we are
+    upgrading to not the one which we are upgrading from.
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 21 Nov 2014 10:32:31 -0800
 
