releasing package ubuntu-release-upgrader version 1:15.04.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:15.04.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.04.1) vivid; urgency=medium
 
   * data/removal_blacklist.cfg: Modify entry for ubuntu-desktop to be
     ubuntu-desktop$ so that it doesn't match ubuntu-desktop-next.
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:15.04.1) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeApport.py: set DistroRelease to the release we are
     upgrading to not the one which we are upgrading from.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 21 Nov 2014 10:32:31 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 03 Dec 2014 13:08:02 -0800
 
 ubuntu-release-upgrader (1:15.04.0) vivid; urgency=low
 
