--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.04.2) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DevelReleaseAnnouncement: updated for 15.04
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 04 Dec 2014 08:43:37 -0800
+
 ubuntu-release-upgrader (1:15.04.1) vivid; urgency=medium
 
   * data/removal_blacklist.cfg: Modify entry for ubuntu-desktop to be
