DistUpgrade/DistUpgradeViewText.py: in the exception handler call apport_crash so apport crash reports are created.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 ubuntu-release-upgrader (1:15.04.2) UNRELEASED; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: updated for 15.04
+  * DistUpgrade/DistUpgradeViewText.py: in the exception handler call
+    apport_crash so apport crash reports are created.
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 04 Dec 2014 08:43:37 -0800
+ -- Brian Murray <brian@ubuntu.com>  Fri, 05 Dec 2014 14:37:51 -0800
 
 ubuntu-release-upgrader (1:15.04.1) vivid; urgency=medium
 
