add compatbility for vte 2.90 (and we need to keep that until 16.04)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.04.3) UNRELEASEDvivid; urgency=low
+
+  * add compatbility for vte 2.90 (and we need to keep that until
+    16.04)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Dec 2014 08:56:35 +0100
+
 ubuntu-release-upgrader (1:15.04.2) vivid; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: updated for 15.04
