remove quirk around kdegames-card-data-extra (no longer available in vivid)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-ubuntu-release-upgrader (1:15.04.3) UNRELEASEDvivid; urgency=low
+ubuntu-release-upgrader (1:15.04.3) UNRELEASED; urgency=low
 
   * add compatbility for vte 2.90 (and we need to keep that until
     16.04)
+  * remove quirk around kdegames-card-data-extra (no longer available
+    in vivid)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Dec 2014 08:56:35 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Dec 2014 08:57:34 +0100
 
 ubuntu-release-upgrader (1:15.04.2) vivid; urgency=medium
 
