Remove extras.ubuntu.com (LP: #1409555)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.04.4) UNRELEASED; urgency=medium
+
+  * Remove extras.ubuntu.com (LP: #1409555)
+
+ -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Mon, 12 Jan 2015 22:52:47 +0000
+
 ubuntu-release-upgrader (1:15.04.3) vivid; urgency=low
 
   * add compatbility for vte 2.90 (and we need to keep that until
