Fix resource warnings & logging.warn deprecation warning.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ubuntu-release-upgrader (1:15.04.4) UNRELEASED; urgency=medium
 
   * Remove extras.ubuntu.com (LP: #1409555)
+  * Fix resource warnings & logging.warn deprecation warning.
 
  -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Mon, 12 Jan 2015 22:52:47 +0000
 
