* DistUpgrade/DistUpgradeViewText.py:   - flush stdout before reading user input. (LP: #1417880)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.04.4) vivid; urgency=medium
+
+  * DistUpgrade/DistUpgradeViewText.py:
+    - flush stdout before reading user input. (LP: #1417880)
+
+ -- Marius Gedminas <marius@gedmin.as>  Wed, 04 Feb 2015 09:45:06 -0500
+
 ubuntu-release-upgrader (1:15.04.3) vivid; urgency=low
 
   * add compatbility for vte 2.90 (and we need to keep that until
