releasing package ubuntu-release-upgrader version 1:15.04.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:15.04.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.04.5) vivid; urgency=medium
 
   * Remove extras.ubuntu.com (LP: #1409555)
   * Fix resource warnings & logging.warn deprecation warning.
 
- -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Sat, 07 Feb 2015 16:14:54 +0000
+ -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Sat, 07 Feb 2015 16:17:12 +0000
 
 ubuntu-release-upgrader (1:15.04.4) vivid; urgency=medium
 
