Log more information when key packages are not available/downloadable.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.04.7) UNRELEASED; urgency=medium
+
+  * Log more information when key packages are not available/downloadable.
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 18 Feb 2015 12:49:07 -0800
+
 ubuntu-release-upgrader (1:15.04.6) vivid; urgency=medium
 
   * Port KDE GUIs to native Qt5 versions.
