Fix the upgrade case where the user only has xubuntu-core or lubuntu-core installed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.04.7) UNRELEASED; urgency=medium
+
+  * Fix the upgrade case where the user only has
+    xubuntu-core or lubuntu-core installed.
+
+ -- Unit 193 <unit193@ubuntu.com>  Wed, 18 Feb 2015 16:56:59 -0500
+
 ubuntu-release-upgrader (1:15.04.6) vivid; urgency=medium
 
   * Port KDE GUIs to native Qt5 versions.
