--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 ubuntu-release-upgrader (1:15.04.7) UNRELEASED; urgency=medium
 
   * Log more information when key packages are not available/downloadable.
+  * DistUpgrade/DistUpgradeViewKDE.py: remove extraneous parenthesis.
+    (LP: #1423279)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 18 Feb 2015 12:49:07 -0800
 
