--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:15.04.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.04.7) vivid; urgency=medium
 
   * Log more information when key packages are not available/downloadable.
   * DistUpgrade/DistUpgradeViewKDE.py: Fix call to showConffile.
