--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:15.04.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.04.8) vivid; urgency=medium
 
   * data/DistUpgrade.cfg: Add xubuntu-core and lubuntu-core to MetaPkgs and
     add KeyDependencies for them. Thanks to LP user Unit 193 for working on
     this.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 23 Feb 2015 09:34:36 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 23 Feb 2015 10:28:34 -0800
 
 ubuntu-release-upgrader (1:15.04.7) vivid; urgency=medium
 
