Further pyflakes tidying in DistUpgrade/DistUpgradeViewKDE.py

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.04.9) vivid; urgency=medium
+
+  * Further pyflakes tidying in DistUpgrade/DistUpgradeViewKDE.py
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 24 Feb 2015 10:36:49 +0100
+
 ubuntu-release-upgrader (1:15.04.8) vivid; urgency=medium
 
   * data/DistUpgrade.cfg: Add xubuntu-core and lubuntu-core to MetaPkgs and
