--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.04.10) vivid; urgency=medium
+
+  * Fix detection of pyqt5 vs pyqqt4
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 26 Feb 2015 16:26:55 +0100
+
 ubuntu-release-upgrader (1:15.04.9) vivid; urgency=medium
 
   * Further pyflakes tidying in DistUpgrade/DistUpgradeViewKDE.py
