--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:15.04.11) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.04.11) vivid; urgency=medium
 
   * DistUpgrade/DistUpgradeApport.py: check to see if
     RELEASE_UPRADER_NO_APPORT is set when running apport_crash or
     apport_pkgfailure. (LP: #1399836)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 09 Mar 2015 14:33:20 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 09 Mar 2015 14:35:00 -0700
 
 ubuntu-release-upgrader (1:15.04.10) vivid; urgency=medium
 
