Launchpad automatic translations update.

--- a/po/hu.po
+++ b/po/hu.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: update-manager.HEAD\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-02-18 16:10+0100\n"
-"PO-Revision-Date: 2013-05-23 02:43+0000\n"
-"Last-Translator: Gabor Kelemen <kelemeng@openscope.org>\n"
+"PO-Revision-Date: 2015-03-10 09:39+0000\n"
+"Last-Translator: Richard Somlói <ricsipontaz@gmail.com>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2015-02-27 05:46+0000\n"
-"X-Generator: Launchpad (build 17361)\n"
+"X-Launchpad-Export-Date: 2015-03-11 05:36+0000\n"
+"X-Generator: Launchpad (build 17389)\n"
 "Language: hu\n"
 
 #. TRANSLATORS: %s is a country
@@ -889,11 +889,11 @@ msgstr "A hibaüzenet: „%s”."
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:144
 msgid "&Upgrade"
-msgstr ""
+msgstr "&Frissítés"
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:147
 msgid "&Cancel"
-msgstr ""
+msgstr "&Mégse"
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:149
 #: ../data/gtkbuilder/ReleaseNotes.ui.h:1
@@ -1279,7 +1279,7 @@ msgstr "Információ"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:753
 msgid "&Start Upgrade"
-msgstr ""
+msgstr "Frissítés &indítása"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:755
 #: ../DistUpgrade/DistUpgradeViewKDE.py:800
