Launchpad automatic translations update.

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-02-18 16:10+0100\n"
-"PO-Revision-Date: 2015-02-26 07:20+0000\n"
-"Last-Translator: Daniel Bernal Dotú <Unknown>\n"
+"PO-Revision-Date: 2015-03-20 12:20+0000\n"
+"Last-Translator: Walter Garcia-Fontes <walter.garcia@upf.edu>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2015-02-27 05:45+0000\n"
-"X-Generator: Launchpad (build 17361)\n"
+"X-Launchpad-Export-Date: 2015-03-21 05:37+0000\n"
+"X-Generator: Launchpad (build 17405)\n"
 "Language: ca\n"
 
 #. TRANSLATORS: %s is a country
@@ -1293,7 +1293,7 @@ msgstr "Informació"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:753
 msgid "&Start Upgrade"
-msgstr ""
+msgstr "&Inicia l'actualització"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:755
 #: ../DistUpgrade/DistUpgradeViewKDE.py:800
