--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.04.12) UNRELEASED; urgency=medium
+
+  * add more compatibility for vte 2.90 (and we need to keep that until
+    16.04) (LP: #1413270)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 25 Mar 2015 14:36:44 -0700
+
 ubuntu-release-upgrader (1:15.04.11) vivid; urgency=medium
 
   * DistUpgrade/DistUpgradeApport.py: check to see if
