add workaround for kubuntu upgrade issue with baloo-kf5 (LP: #1426132)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.04.13) vivid; urgency=low
+
+  * add workaround for kubuntu upgrade issue with baloo-kf5
+    (LP: #1426132)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 31 Mar 2015 21:04:51 +0200
+
 ubuntu-release-upgrader (1:15.04.12) vivid; urgency=medium
 
   * add more compatibility for vte 2.90 (and we need to keep that until
