make i18n more robust, thanks to Brian Murray (LP: #1370243)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.04.14) vivid; urgency=low
+
+  * make i18n more robust, thanks to Brian Murray (LP: #1370243)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Apr 2015 17:59:48 -0500
+
 ubuntu-release-upgrader (1:15.04.13) vivid; urgency=low
 
   * add workaround for kubuntu upgrade issue with baloo-kf5
