releasing package ubuntu-release-upgrader version 1:15.04.14

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 ubuntu-release-upgrader (1:15.04.14) vivid; urgency=low
 
+  [ Michael Vogt ]
   * make i18n more robust, thanks to Brian Murray (LP: #1370243)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Apr 2015 17:59:48 -0500
+  [ Brian Murray ]
+  * po/*.po:
+    - automatic launchpad translation update
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 17 Apr 2015 10:13:11 -0700
 
 ubuntu-release-upgrader (1:15.04.13) vivid; urgency=low
 
