--- a/po/sl.po
+++ b/po/sl.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-02-18 16:10+0100\n"
-"PO-Revision-Date: 2013-05-23 02:39+0000\n"
-"Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
+"PO-Revision-Date: 2015-05-01 10:29+0000\n"
+"Last-Translator: Sasa Batistic <Unknown>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || "
 "n%100==4 ? 3 : 0);\n"
-"X-Launchpad-Export-Date: 2015-04-02 05:45+0000\n"
-"X-Generator: Launchpad (build 17413)\n"
+"X-Launchpad-Export-Date: 2015-05-02 05:24+0000\n"
+"X-Generator: Launchpad (build 17474)\n"
 "X-Poedit-Country: SLOVENIA\n"
 "Language: sl\n"
 "X-Poedit-Language: Slovenian\n"
@@ -122,8 +122,8 @@ msgid ""
 "software. Please fix them first using synaptic or apt-get before proceeding."
 msgstr ""
 "Sistem vsebuje okvarjene pakete, ki jih s tem programom ni mogoče popraviti. "
-"Preden je mogoče nadaljevati, je treba namestitev popraviti s programom "
-"synaptic ali orodjem apt-get."
+"Pred nadaljevanjem je potrebno namestitev popraviti s programom synaptic ali "
+"orodjem apt-get."
 
 #. FIXME: change the text to something more useful
 #: ../DistUpgrade/DistUpgradeCache.py:641
@@ -170,8 +170,8 @@ msgid ""
 "network problem. You may want to try again later. See below for a list of "
 "unauthenticated packages."
 msgstr ""
-"Nekaterih paketov ni mogoče overiti. Napaka je lahko prehodne narave in bo "
-"kmalu odpravljena. Spodaj je izpisan seznam neoverjenih paketov."
+"Nekaterih paketov ni mogoče overiti. Napaka je lahko prehodne narave, zato "
+"poskusite ponovno kasneje. Spodaj je izpisan seznam neoverjenih paketov."
 
 #: ../DistUpgrade/DistUpgradeCache.py:734
 #, python-format
@@ -257,7 +257,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:296
 msgid "Continue running under SSH?"
-msgstr "Ali naj se nadaljuje izvajanje preko varnega SSH protokola?"
+msgstr "Ali naj se nadaljuje izvajanje preko varnega protokola SSH?"
 
 #: ../DistUpgrade/DistUpgradeController.py:297
 #, python-format
@@ -299,7 +299,7 @@ msgid ""
 "with e.g.:\n"
 "'%s'"
 msgstr ""
-"V primeru da uporabljate požarni zid, boste morda morali ta vrata začasno "
+"V primeru, da uporabljate požarni zid, boste morda morali ta vrata začasno "
 "odpreti. Ker je to lahko nevarno, to ni storjeno samodejno. Vrata lahko "
 "odprete na primer z:\n"
 "'%s'"
@@ -336,9 +336,10 @@ msgid ""
 "are permanent."
 msgstr ""
 "Nadgradnja se izvaja v načinu preskovnika (preizkusnemu načinu). Vse "
-"spremembe zapisane v '%s' in bodo izgubljene ob naslednjem ponovnem zagonu.\n"
+"spremembe so zapisane v '%s' in bodo izgubljene ob naslednjem ponovnem "
+"zagonu.\n"
 "\n"
-"*Nobene* spremembe zapisane v sistemsko mapo od zdaj do naslednjega "
+"*Nobene* spremembe, zapisane v sistemsko mapo, od zdaj do naslednjega "
 "ponovnega zagona ne bodo trajne."
 
 #: ../DistUpgrade/DistUpgradeController.py:439
@@ -523,7 +524,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:941
 msgid "Not enough free disk space"
-msgstr "Ni dovolj prostora na disku"
+msgstr "Na disku ni dovolj prostora"
 
 #: ../DistUpgrade/DistUpgradeController.py:942
 #, python-format
@@ -649,7 +650,7 @@ msgid ""
 "A problem occurred during the clean-up. Please see the below message for "
 "more information. "
 msgstr ""
-"Prišlo je do napake med čiščenjem paketov. Več podrobnosti je navedenih v "
+"Med čiščenjem paketov je prišlo do težave. Več podrobnosti je navedenih v "
 "sporočilu spodaj. "
 
 #. FIXME: instead of error out, fetch and install it
@@ -728,11 +729,11 @@ msgstr "Posodabljanje podatkov o skladiščih"
 
 #: ../DistUpgrade/DistUpgradeController.py:1724
 msgid "Failed to add the cdrom"
-msgstr "Dodajanje cd-roma je spodletelo"
+msgstr "Dodajanje nosilca cdrom je spodletelo"
 
 #: ../DistUpgrade/DistUpgradeController.py:1725
 msgid "Sorry, adding the cdrom was not successful."
-msgstr "DOdajanje nosilca CD je spodletelo."
+msgstr "Dodajanje nosilca cdrom je spodletelo."
 
 #: ../DistUpgrade/DistUpgradeController.py:1760
 msgid "Invalid package information"
@@ -749,6 +750,14 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Po posodobitvi vaših podatkov o paketih ni bilo mogoče najti nujnega paketa "
+"'%s'. To se je morda zgodilo, ker nimate navedenih uradnih zrcalnih "
+"strežnikov v svojih programskih virih ali pa zaradi prekomerne obremenitve "
+"zrcalnega strežnika, ki ste ga uporabili.\n"
+"Za trenutni seznam nastavljenih programskih virov si oglejte "
+"/etc/apt/sources.list.\n"
+"V primeru preobremenjenega zrcalnega strežnika ponovno poskusite z "
+"nadgradnjo pozneje."
 
 #: ../DistUpgrade/DistUpgradeController.py:1789
 #: ../DistUpgrade/DistUpgradeController.py:1845
@@ -791,7 +800,7 @@ msgstr "Delna nadgradnja je končana."
 #: ../DistUpgrade/DistUpgradeFetcher.py:118
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:163
 msgid "Could not find the release notes"
-msgstr "Ni mogoče najti opomb ob izdaji"
+msgstr "Opomb ob izdaji ni bilo mogoče najti"
 
 #: ../DistUpgrade/DistUpgradeFetcher.py:119
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:164
@@ -859,7 +868,7 @@ msgid ""
 "or with the server. "
 msgstr ""
 "Overitev nadgradnje je spodletela. Morda je prišlo do napake omrežja ali "
-"strežniška. "
+"strežnika. "
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:289
 msgid "Failed to extract"
@@ -871,7 +880,7 @@ msgid ""
 "with the server. "
 msgstr ""
 "Razširjanje paketov nadgradnje je spodletelo. Morda je prišlo do napake "
-"omrežja ali strežniška. "
+"omrežja ali strežnika. "
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:295
 msgid "Verification failed"
@@ -882,8 +891,8 @@ msgid ""
 "Verifying the upgrade failed.  There may be a problem with the network or "
 "with the server. "
 msgstr ""
-"Preverjanje nadgradnje je spodletelo. Morda je prišlo do ali strežniške "
-"omrežja ali strežnika. "
+"Preverjanje nadgradnje je spodletelo. Morda je prišlo do napake omrežja ali "
+"strežnika. "
 
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:310
 #: ../DistUpgrade/DistUpgradeFetcherCore.py:316
@@ -906,11 +915,11 @@ msgstr "Sporočilo o napaki je '%s'."
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:144
 msgid "&Upgrade"
-msgstr ""
+msgstr "&Nadgradi"
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:147
 msgid "&Cancel"
-msgstr ""
+msgstr "&Prekliči"
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:149
 #: ../data/gtkbuilder/ReleaseNotes.ui.h:1
@@ -975,7 +984,7 @@ msgstr ""
 msgid ""
 "Your graphics hardware may not be fully supported in Ubuntu 12.04 LTS."
 msgstr ""
-"Vaša grafična strojna oprema morda v Ubuntuju 12.04 LTS ni polno podprta."
+"Vaša grafična strojna oprema v Ubuntuju 12.04 LTS morda ni popolnoma podprta."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:192
 msgid ""
@@ -1005,8 +1014,8 @@ msgid ""
 "\n"
 "Do you want to continue?"
 msgstr ""
-"Sistem trenutno uporablja grafični gonilnik AMD 'fglrx'. V Ubuntu 10.04 LTS "
-"za to grafično kartico ni ustreznega gonilnika.\n"
+"Sistem trenutno uporablja grafični gonilnik AMD 'fglrx'. V Ubuntuju 10.04 "
+"LTS ni ustreznega gonilnika za to grafično kartico.\n"
 "\n"
 "Ali želite nadaljevati?"
 
@@ -1021,10 +1030,10 @@ msgid ""
 "minimal architecture. It is not possible to upgrade your system to a new "
 "Ubuntu release with this hardware."
 msgstr ""
-"Vaših sistem uporablja CPE i586 ali CPE, ki nima razširitve 'cmov'. Vsi "
-"paketi so bili izgrajeni z optimizacijami, ki kot najmanjšo arhitekturo "
-"zahtevajo i686. S to strojno opremo vašega sistema ni mogoče nadgraditi na "
-"novo izdajo Ubuntuja."
+"Vaš sistem uporablja CPE i586 ali CPE, ki nima razširitve 'cmov'. Vsi paketi "
+"so bili izgrajeni z optimizacijami, ki kot najmanjšo arhitekturo zahtevajo "
+"i686. S to strojno opremo vašega sistema ni mogoče nadgraditi na novo izdajo "
+"Ubuntuja."
 
 #: ../DistUpgrade/DistUpgradeQuirks.py:289
 msgid "No ARMv6 CPU"
@@ -1056,7 +1065,7 @@ msgid ""
 "Are you sure you want to continue?"
 msgstr ""
 "Sistem je videti kot navidezno okolje brez ozadnjega programa init (npr. "
-"Linux-VServer). Ubuntu 10.04 LTS v takšenem okolju ne more delovati, zato je "
+"Linux-VServer). Ubuntu 10.04 LTS v takšnem okolju ne more delovati, zato je "
 "treba najprej posodobiti navidezno okolje.\n"
 "\n"
 "Ali res želite nadaljevati?"
@@ -1096,7 +1105,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeMain.py:70
 msgid "*DEPRECATED* this option will be ignored"
-msgstr "*ZASTARELO* ta možnost bo bila prezrta"
+msgstr "*ZASTARELO* ta možnost bo prezrta"
 
 #: ../DistUpgrade/DistUpgradeMain.py:73
 msgid "Perform a partial upgrade only (no sources.list rewriting)"
@@ -1166,7 +1175,7 @@ msgid ""
 "The upgrade will continue but the '%s' package may not be in a working "
 "state. Please consider submitting a bug report about it."
 msgstr ""
-"Nadgradnja se bo nadaljevala vendar pa paket '%s' najverjetneje ne bo "
+"Nadgradnja se bo nadaljevala, vendar pa paket '%s' najverjetneje ne bo "
 "deloval. Pošljite poročilo o hrošču."
 
 #. self.expander.set_expanded(True)
@@ -1228,7 +1237,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:675
 msgid "To prevent data loss close all open applications and documents."
 msgstr ""
-"Da ne pride do izgube podatkov, zaprite vse odprte programe in dokumente."
+"Zaprite vse odprte programe in dokumente, da ne pride do izgube podatkov."
 
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:689
 #, python-format
@@ -1290,7 +1299,7 @@ msgstr "Podatki"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:753
 msgid "&Start Upgrade"
-msgstr ""
+msgstr "&Začni nadgradnjo"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:755
 #: ../DistUpgrade/DistUpgradeViewKDE.py:800
@@ -1429,8 +1438,8 @@ msgid ""
 "This download will take about %s with a 1Mbit DSL connection and about %s "
 "with a 56k modem."
 msgstr ""
-"Prejemanje paketov bo trajalo približno %s z 1 Mbit DSL povezavo in "
-"približno %s s 56k modemom."
+"Prejemanje paketov bo trajalo približno %s s povezavo DSL 1 Mbit in "
+"približno %s z modemom 56k."
 
 #. if we have a estimated speed, use it
 #: ../DistUpgrade/DistUpgradeView.py:175
@@ -1554,7 +1563,7 @@ msgstr "Programska oprema na tem računalniku je posodobljena."
 msgid ""
 "There are no upgrades available for your system. The upgrade will now be "
 "canceled."
-msgstr "Za vaš sistem nadgradnja ni na voljo. Postopek bo preklican."
+msgstr "Za vaš sistem ni na voljo nadgradenj. Postopek bo preklican."
 
 #: ../DistUpgrade/DistUpgradeView.py:433
 msgid "Reboot required"
@@ -1657,7 +1666,7 @@ msgid ""
 "If you select 'y' the system will be restarted."
 msgstr ""
 "Za končanje nadgradnje je treba sistem ponovno zagnati.\n"
-"Če izberete 'd', se bo sistem takoj znova zagnal."
+"Če izberete 'd', se bo sistem znova zagnal takoj."
 
 #: ../DistUpgrade/GtkProgress.py:71
 #, python-format
@@ -1691,7 +1700,7 @@ msgid ""
 "The system could be in an unusable state if you cancel the upgrade. You are "
 "strongly adviced to resume the upgrade."
 msgstr ""
-"<b><big>Ali naj se nadgradnja prekliče?</big></b>\n"
+"<b><big>Ali se naj nadgradnja prekliče?</big></b>\n"
 "\n"
 "S tem bo posodabljanje prekinjeno in sistem bo ostal v nedelujočem stanju. "
 "Priporočeno je, da se nadgradnja zaključi do konca."
@@ -1736,7 +1745,7 @@ msgstr "Nadgradnja distribucije"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 15.04</big></b>"
-msgstr ""
+msgstr "<b><big>Nadgrajevanje Ubuntuja na različico 15.04</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
@@ -1805,15 +1814,15 @@ msgstr "Izvedi delno nadgradnjo"
 msgid "To perform a partial upgrade, you need to authenticate."
 msgstr "Za delno nadgradnjo sistema Ubuntu je zahtevana overitev."
 
-#: ../do-partial-upgrade:74 ../do-release-upgrade:81
+#: ../do-partial-upgrade:74 ../do-release-upgrade:78
 msgid "Show version and exit"
 msgstr "Pokaži različico in končaj"
 
-#: ../do-partial-upgrade:77 ../do-release-upgrade:88
+#: ../do-partial-upgrade:77 ../do-release-upgrade:85
 msgid "Directory that contains the data files"
 msgstr "Mapa, ki vsebuje podatkovne datoteke"
 
-#: ../do-partial-upgrade:80 ../do-release-upgrade:101
+#: ../do-partial-upgrade:80 ../do-release-upgrade:98
 msgid "Run the specified frontend"
 msgstr "Zaženi navedeno začelje"
 
@@ -1821,23 +1830,23 @@ msgstr "Zaženi navedeno začelje"
 msgid "Running partial upgrade"
 msgstr "Izvajanje delne nadgradnje"
 
-#: ../do-release-upgrade:31 ../do-release-upgrade:43
+#: ../do-release-upgrade:32 ../do-release-upgrade:44
 msgid "Downloading the release upgrade tool"
 msgstr "Prejemanje orodja za nadgradnjo izdaje"
 
-#: ../do-release-upgrade:84 ../check-new-release-gtk:177
+#: ../do-release-upgrade:81 ../check-new-release-gtk:177
 msgid "Check if upgrading to the latest devel release is possible"
 msgstr ""
 "Preveri, ali je mogoče sistem nadgraditi na najnovejšo razvojno različico"
 
-#: ../do-release-upgrade:91 ../check-new-release-gtk:181
+#: ../do-release-upgrade:88 ../check-new-release-gtk:181
 msgid ""
 "Try upgrading to the latest release using the upgrader from $distro-proposed"
 msgstr ""
 "Poskusite nadgraditi na najnovejšo različico s pomočjo orodja za "
 "nadgrajevanje iz $distro-proposed"
 
-#: ../do-release-upgrade:95
+#: ../do-release-upgrade:92
 msgid ""
 "Run in a special upgrade mode.\n"
 "Currently 'desktop' for regular upgrades of a desktop system and 'server' "
@@ -1847,11 +1856,11 @@ msgstr ""
 "Trenutno sta podprta načina 'desktop' za namizne sisteme in 'server' za "
 "strežniške sisteme."
 
-#: ../do-release-upgrade:103
+#: ../do-release-upgrade:100
 msgid "Test upgrade with a sandbox aufs overlay"
 msgstr "Preizkusna nadgradnja v  načinu peskovnika aufs"
 
-#: ../do-release-upgrade:106
+#: ../do-release-upgrade:103
 msgid ""
 "Check only if a new distribution release is available and report the result "
 "via the exit code"
@@ -1859,23 +1868,23 @@ msgstr ""
 "Preveri le, ali je na voljo nova različica distribucije in izpiši poročilo s "
 "pomočjo izhodne kode"
 
-#: ../do-release-upgrade:120
+#: ../do-release-upgrade:117
 msgid "The options --devel-release and --proposed are"
 msgstr "Možnosti --devel-release in --proposed se"
 
-#: ../do-release-upgrade:121
+#: ../do-release-upgrade:118
 msgid "mutually exclusive. Please use only one of them."
 msgstr "med seboj izključujeta. Uporabite samo eno."
 
-#: ../do-release-upgrade:125
+#: ../do-release-upgrade:122
 msgid "Checking for a new Ubuntu release"
 msgstr "Preverjanje za novo izdajo Ubuntu"
 
-#: ../do-release-upgrade:137
+#: ../do-release-upgrade:134
 msgid "Your Ubuntu release is not supported anymore."
 msgstr "Vaša izdaja Ubuntu ni več podprta."
 
-#: ../do-release-upgrade:138
+#: ../do-release-upgrade:135
 msgid ""
 "For upgrade information, please visit:\n"
 "%(url)s\n"
@@ -1883,15 +1892,15 @@ msgstr ""
 "Za podrobnosti o posodobitvah obiščite:\n"
 "%(url)s\n"
 
-#: ../do-release-upgrade:144
+#: ../do-release-upgrade:141
 msgid "No new release found"
 msgstr "Ni novih izdaj"
 
-#: ../do-release-upgrade:149
+#: ../do-release-upgrade:146
 msgid "Release upgrade not possible right now"
 msgstr "Nadgradnja izdaje trenutno ni mogoča"
 
-#: ../do-release-upgrade:150
+#: ../do-release-upgrade:147
 #, c-format
 msgid ""
 "The release upgrade can not be performed currently, please try again later. "
@@ -1900,12 +1909,12 @@ msgstr ""
 "Nadgradnja izdaje trenutno ne more biti opravljena. Poskusite kasneje. "
 "Strežnik je sporočil: '%s'"
 
-#: ../do-release-upgrade:156
+#: ../do-release-upgrade:153
 #, c-format
 msgid "New release '%s' available."
 msgstr "Na voljo je nova izdaja '%s'."
 
-#: ../do-release-upgrade:157
+#: ../do-release-upgrade:154
 msgid "Run 'do-release-upgrade' to upgrade to it."
 msgstr "Za nadgradnjo na novo izdajo zaženite ukaz 'do-release-upgrade'."
 
