* DistUpgrade/{EOL,}ReleaseAnnouncement,   DistUpgrade/DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 15.04->15.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:15.10.0) wily; urgency=medium
+
+  * DistUpgrade/{EOL,}ReleaseAnnouncement,
+    DistUpgrade/DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:
+    - updated for 15.04->15.10
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 08 May 2015 10:19:29 -0700
+
 ubuntu-release-upgrader (1:15.04.14) vivid; urgency=low
 
   [ Michael Vogt ]
