--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.10.1) UNRELEASED; urgency=medium
+
+  * Resolve test failures due to new version of pep8.
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 Aug 2015 11:21:51 -0700
+
 ubuntu-release-upgrader (1:15.10.0) wily; urgency=medium
 
   * DistUpgrade/{EOL,}ReleaseAnnouncement,
