--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.10.2) wily; urgency=medium
+
+  * Fix upgrader kde frontend fails to start LP: #1488843
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 26 Aug 2015 12:51:58 +0100
+
 ubuntu-release-upgrader (1:15.10.1) wily; urgency=medium
 
   * Resolve test failures due to new version of pep8.
