--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.10.6) UNRELEASED; urgency=medium
+
+  * DistUpgrade/build-tarball.sh: Copy the contents of demoted.cfg so it is
+    not a broken symlink. (LP: #1498193)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 21 Sep 2015 14:49:31 -0700
+
 ubuntu-release-upgrader (1:15.10.5) wily; urgency=medium
 
   * Restore pep8 change from .3
