releasing package ubuntu-release-upgrader version 1:15.10.6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:15.10.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.10.6) wily; urgency=medium
 
   * DistUpgrade/build-tarball.sh: Copy the contents of demoted.cfg so it is
     not a broken symlink. (LP: #1498193)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 21 Sep 2015 14:49:31 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 21 Sep 2015 14:58:41 -0700
 
 ubuntu-release-upgrader (1:15.10.5) wily; urgency=medium
 
