releasing package ubuntu-release-upgrader version 1:15.10.7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:15.10.7) wily; urgency=medium
+
+  * data/DistUpgrade.cfg:
+    + Add Ubuntu MATE support.
+  * data/removal_blacklist.cfg:
+    + Add Ubuntu MATE support.
+  * debian/control:
+    + Standards-Version: 3.9.6
+
+ -- Martin Wimpress <code@flexion.org>  Wed, 23 Sep 2015 21:14:49 +0100
+
 ubuntu-release-upgrader (1:15.10.6) wily; urgency=medium
 
   * DistUpgrade/build-tarball.sh: Copy the contents of demoted.cfg so it is
