--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:15.10.8) UNRELEASED; urgency=medium
+
+  * data/removal_blacklist.cfg: make ubuntu-release-upgrader blacklist entry
+    more specific so it does not match ubuntu-release-upgrader-qt.
+    (LP: #1313514)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 05 Oct 2015 16:57:15 -0700
+
 ubuntu-release-upgrader (1:15.10.7) wily; urgency=medium
 
   * data/DistUpgrade.cfg:
