--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:15.10.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.10.8) wily; urgency=medium
 
   * data/removal_blacklist.cfg: make ubuntu-release-upgrader blacklist entry
     more specific so it does not match ubuntu-release-upgrader-qt.
     (LP: #1313514)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 05 Oct 2015 16:57:15 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 05 Oct 2015 17:06:06 -0700
 
 ubuntu-release-upgrader (1:15.10.7) wily; urgency=medium
 
