--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:15.10.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.10.9) wily; urgency=medium
 
   * po/update-manager.pot:
     - updated (LP: #1502529)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 07 Oct 2015 16:20:08 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 07 Oct 2015 16:32:00 -0700
 
 ubuntu-release-upgrader (1:15.10.8) wily; urgency=medium
 
