--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.10.10) UNRELEASED; urgency=medium
+
+  * Log the installed meta packages to make troubleshooting upgrades easier.
+    (LP: #1505359)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 12 Oct 2015 12:20:53 -0700
+
 ubuntu-release-upgrader (1:15.10.9) wily; urgency=medium
 
   * po/update-manager.pot:
