releasing package ubuntu-release-upgrader version 1:15.10.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:15.10.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.10.10) wily; urgency=medium
 
   * Log the installed meta packages to make troubleshooting upgrades easier.
     (LP: #1505359)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 12 Oct 2015 12:20:53 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 12 Oct 2015 12:31:30 -0700
 
 ubuntu-release-upgrader (1:15.10.9) wily; urgency=medium
 
